[project]
name = "belajar_python"
version = "0.1.0"
description = "Belajar Distribusi Python"
authors = [
    {name = "Pramono", email = "indrapramono21@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
